--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,14 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>5.1.9.RELEASE</version>
+<!--			<version>5.1.9.RELEASE</version>-->
+			<version>5.2.0.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>5.1.9.RELEASE</version>
+<!--			<version>5.1.9.RELEASE</version>-->
+			<version>5.2.0.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
